rtmpsrc: Fix indentation with gst-indent

https://bugzilla.gnome.org/show_bug.cgi?id=755732