ext/rtmp/gstrtmpsrc.c
@@ -437,8 +437,8 @@ gst_rtmp_src_query (GstBaseSrc * basesrc, GstQuery * query)
     }
     case GST_QUERY_SCHEDULING:{
       gst_query_set_scheduling (query,
-          GST_SCHEDULING_FLAG_SEQUENTIAL | GST_SCHEDULING_FLAG_BANDWIDTH_LIMITED,
-          1, -1, 0);
+          GST_SCHEDULING_FLAG_SEQUENTIAL |
+          GST_SCHEDULING_FLAG_BANDWIDTH_LIMITED, 1, -1, 0);
       gst_query_add_scheduling_mode (query, GST_PAD_MODE_PUSH);
 
       ret = TRUE;
